<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="alert">Weather Alerts</string>
    <string name="search_city">Search a city</string>
    <string name="unknown">Unknown</string>

    <string name="loading">Loading…</string>
    <string name="loading_degrees" translatable="false">…°C</string>
    <string name="loading_icon" translatable="false">☀️</string>

    <string name="home">Home</string>
    <string name="home_notification_title">Current Weather</string>
    <string name="temperature_notification">%1$s: The temperature is %2$s</string>
    <string name="air_quality">The air quality index is of {note}/5 today</string>

    <string name="favorites">Favorites</string>
    <string name="favorite_cities">My favorite cities</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>

    <string name="settings">Settings</string>

    <string name="theme">Theme</string>
    <string name="select_theme">Select a theme</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_default">System Default</string>

    <string name="about">About</string>
    <string name="about_message">Weather App allows you to view weather forecasts for your favorite cities. Features include real-time temperature, air quality index, and theme customization (light/dark). You can also change the app’s language between French and English.</string>

    <string name="language">Language</string>
    <string name="select_language">Select a language</string>
    <string name="language_french">French</string>
    <string name="language_english">English</string>

    <string name="source">Source</string>
    <string name="select_source">Select a source</string>
    <string name="dwd_germany" translatable="false">DWD Germany</string>
    <string name="noaa_us" translatable="false">NOAA U.S.</string>
    <string name="meteo_france" translatable="false">Météo-France</string>
    <string name="ecmwf" translatable="false">ECMWF</string>
    <string name="uk_met_office" translatable="false">UK Met Office</string>
    <string name="kma_korea" translatable="false">KMA Korea</string>
    <string name="jma_japan" translatable="false">JMA Japan</string>
    <string name="met_norway" translatable="false">MET Norway</string>
    <string name="gem_canada" translatable="false">GEM Canada</string>
    <string name="bom_australia" translatable="false">BOM Australia</string>
    <string name="cma_china" translatable="false">CMA China</string>
    <string name="knmi_netherlands" translatable="false">KNMI Netherlands</string>
    <string name="dmi_denmark" translatable="false">DMI Denmark</string>
    <string name="italiameteo" translatable="false">ItaliaMeteo</string>

    <string name="weather_type_cloud">Cloudy</string>
    <string name="weather_type_sunny">Sunny</string>
    <string name="weather_type_rainy">Rainy</string>
    <string name="weather_type_snow">Snow</string>
    <string name="weather_type_thunder">Thunder</string>


</resources>