<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/settings_section_spacing"
                android:layout_marginTop="@dimen/settings_title_margin_top" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_section_spacing"
                app:cardCornerRadius="@dimen/settings_dialog_corner_radius"
                app:cardElevation="@dimen/settings_card_view_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/settings_dialog_padding">

                    <TextView
                        android:id="@+id/theme_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme"
                        android:textSize="@dimen/text_size"
                        android:paddingTop="@dimen/settings_item_padding"
                        android:paddingBottom="@dimen/settings_item_padding" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_view_layout_height"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/language_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="@dimen/text_size"
                        android:paddingTop="@dimen/settings_item_padding"
                        android:paddingBottom="@dimen/settings_item_padding" />

                    <TextView
                        android:id="@+id/source_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:textSize="@dimen/text_size"
                        android:paddingTop="@dimen/settings_item_padding"
                        android:paddingBottom="@dimen/settings_item_padding" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_view_layout_height"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/about_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textSize="@dimen/text_size"
                        android:paddingTop="@dimen/settings_item_padding"
                        android:paddingBottom="@dimen/settings_item_padding" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
